fix expander style on firefox

--- a/static/style.css
+++ b/static/style.css
@@ -1010,6 +1010,7 @@ main aside {
 .tree details summary {
   box-sizing: border-box;
   list-style-image: none;
+  list-style-type: none;
   outline: none;
   padding-right: 52px;
   position: relative;
