--- a/styles/partials/tree.less
+++ b/styles/partials/tree.less
@@ -76,6 +76,7 @@
     details summary {
         box-sizing: border-box;
         list-style-image: none;
+        list-style-type: none;
         outline: none;
         padding-right: 52px;
         position: relative;
